# ska-mid-psi

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.rst  CODEOWNERS  Makefile  README.md  pyproject.toml  s2secret.yaml  spfrx_pod.yaml
.gitlab/ci/: psi-mid.gitlab-ci.yml
archiver/: archiver.mk  configure.sh  default.yaml  demo.yaml  dish-lmc-spfrx.yaml  dish-lmc.yaml  map-128-demo.yaml  map-90-test.yaml  mid-telescope-nf.yaml  mid-telescope.yaml  spfrx.yaml  template.yaml
charts/oda-db/: values.yaml
charts/oda-db/charts/: ska-db-oda-umbrella-8.0.1.tgz
charts/ska-mid-psi/: Chart.yaml  tmc-1-dish-lmc-values.yaml  tmc-4-dish-lmc-values.yaml  tmc-8-dish-lmc-values.yaml  tmc-dish-lmc-values.yaml  tmc-mock-values.yaml  values.yaml
charts/ska-mid-psi-archiver/: Chart.yaml  values.yaml
charts/ska-mid-psi-archiver/data/: archviewer-ingress.yaml  archwizard-ingress.yaml  configurator-ingress.yaml
charts/ska-mid-psi-archiver/templates/: _helpers.tpl  tls-secrets.yaml
charts/ska-mid-psi-db-oda/: Chart.yaml  values.yaml
charts/ska-mid-psi-dish-lmc/: Chart.yaml  values.yaml
charts/ska-mid-psi-oda-odt/: Chart.yaml  values.yaml
charts/ska-mid-psi/charts/: ska-csp-lmc-mid-0.16.2.tgz  ska-db-oda-1.6.1.tgz  ska-landingpage-0.8.3.tgz  ska-log-consumer-0.1.6.tgz  ska-mid-cbf-mcs-0.10.19-dev.cbcbacc2d.tgz  ska-mid-cbf-tmleafnode-0.10.19-dev.cbcbacc2d.tgz  ska-oso-oet-5.0.0.tgz  ska-sdp-0.17.0.tgz  ska-ser-skuid-3.3.3.tgz  ska-sim-dishmaster-2.0.3.tgz  ska-tango-alarmhandler-0.1.5.tgz  ska-tango-base-0.4.7.tgz  ska-tango-tangogql-1.3.8.tgz  ska-tango-taranta-2.2.4.tgz  ska-tango-taranta-auth-0.1.6.tgz  ska-tango-taranta-dashboard-1.4.0.tgz  ska-tango-taranta-dashboard-pvc-1.4.0.tgz  ska-tango-util-0.4.7.tgz  (+1 more)
configs/4-receptor/: assign_resources.json  assign_resources_tmc.json  configure_scan.json  release_resources.json  scan.json
configs/auto-correlation/: assign_resources_sdp.json  configure_scan.json  configure_sdp.json
configs/common/: initial_system_param.json
configs/spfrx/: pingloop.py  program-bitstream-remote.sh  spfrx-deploy-artifacts.sh  spfrx-remote-start.sh  spfrx-remote-stop.sh
dashboards/: Signal Chain Monitoring Histograms.wj
notebooks/: auto-correlation.ipynb  spfrx.ipynb  tmc_4-receptor_correlation.ipynb
notebooks/json_files/: assign_resources.json
platform/eda/: README.md
platform/metallb/: README.md  metallb-ip-pool.yaml  metallb-l2.yaml
platform/node-provisioning/: README.md  nvdp-values.yaml
platform/system-test-artifacts/: README.md  system-tests-pvc.yaml  system-tests-sts.yaml
platform/vault/: README.md
scripts/: cleanup_artefacts.sh  log-collector.sh  measurement-data-extract.sh  read-measurement-data.py
secrets/: s2secret.yaml
tests/: conftest.py  pytest.ini  test_e2e_single_scan_using_bite.py  xray-config.json
tests/features/: e2e_single_scan_using_bite.feature
tests/lib/: constants.py
(+31 files in other folders)
