[tool.poetry]
name = "ska-mid-psi"
version = "0.0.1"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/ska-mid-psi"
description = ""
authors = ["Aditya Joshi", "Jared Murphy", "Mae Yee"]

[[tool.poetry.source]]
name = "nexus-internal"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = "^3.10"
ska-oso-pdm = { version = "^15.4.0", source = "nexus-internal" }
ska-oso-scripting = { version = "^9.0.3", python = ">=3.10,< 3.13", source = "nexus-internal" }
ska-tmc-cdm = { version = "^12.0.0", source = "nexus-internal" }
